package main.java.Proyectos.ExamExtraordinary;

public interface AccionProtocolaria {

    void recibirBesico();

}
