package main.java.Proyectos.ExamExtraordinary;

public enum EstadoPeregrino {
    SOLICITUD_OK,EN_COLA,BENDECIDO;
}
