package main.java.Proyectos.ExamExtraordinary;

public class Extranjero extends Peregrino{

    private String pais;

    public Extranjero(Integer numReserva, String nombre, String pais) {
        super(numReserva, nombre);
        this.pais=pais;
    }


}
