package main.java.Proyectos.ExamExtraordinary;

public class Nacional extends Peregrino{

    private String provincia;

    public Nacional(Integer numReserva, String nombre, String provincia) {
        super(numReserva, nombre);
        this.provincia=provincia;
    }


}
